pdf: Force text annotations to have a fixed size 24x24

Some tools create pdf text annotations with a /Rect field, whose
volume is very small or zero. Nevertheless, one expects tool-tips
when hovering them, or popup windows to appear when clicking them.
This patch forces a fixed size for text annotations equal to the size
of their icons.

https://bugzilla.gnome.org/show_bug.cgi?id=685334